--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "prepublishOnly": "yarn run test && yarn run build"
   },
   "dependencies": {
-    "flatpickr": "^4.5.1"
+    "flatpickr": "https://github.com/fauzymk/flatpickr.git#new-range-plugin"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
